# OpenRest

./: .gitignore  Cargo.toml  openrest.toml.example  run.bat
apps/backend/: Cargo.toml
apps/backend/src/: main.rs
apps/posto/: package-lock.json  package.json
apps/posto/src/: App.css  App.tsx  AtSeriesView.tsx  ClientesView.tsx  ConfigView.tsx  DeliveryView.tsx  DispositivosView.tsx  DocumentTemplatesView.tsx  api.ts
apps/posto/src-tauri/: Cargo.toml  tauri.conf.json
apps/posto/src-tauri/src/: main.rs
crates/api-rest/: Cargo.toml
crates/api-rest/src/: at_series.rs  error.rs  lib.rs
crates/at-series/: Cargo.toml
crates/at-series/examples/: smoke.rs  verify_cipher.rs
crates/at-series/src/: lib.rs  soap.rs  types.rs  wss.rs
crates/devices/: Cargo.toml
crates/devices/src/: a4.rs  escpos.rs  escpos_encode.rs  lib.rs  spooler.rs  template.rs  transport.rs
crates/domain/: Cargo.toml
crates/domain/src/: lib.rs
crates/fiscal/: Cargo.toml
crates/fiscal/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: lib.rs
crates/storage/: Cargo.toml
crates/storage/migrations/: 20230101000000_init.sql  20230102000000_phase1_tables.sql  20230103000000_payments.sql  20230104000000_subfamilies_and_fiscal.sql  20230105000000_atcud_table.sql  20230106000000_locais.sql  20230107000000_modes.sql  20230108000000_pvps_zonas_entregadores.sql  20230109000000_print_zones.sql  20230110000000_cancel_anular.sql  20230111000000_anulacoes_cancelamentos.sql  20230112000000_niveis_acesso.sql  20230113000000_transferencias.sql  20230114000000_clientes_pais_rgpd.sql  20230115000000_documents_data_dia.sql  20230116000000_sessoes_empregado.sql  20230117000000_payments_multi_method.sql  20230118000000_parent_document.sql  20230119000000_lines_fractional.sql  20230120000000_document_templates.sql  20230121000000_refine_vd_fatura_templates.sql  20230122000000_pt_sales_documents.sql  20230123000000_dispositivo_conexao.sql
crates/storage/src/: lib.rs  repositories.rs  seed.rs
keys/: README.md  at_test_client_cert.pem  at_test_client_key.pem
spec/: README.md
spec/00-overview/: 01-vision.md  02-glossary.md
spec/01-architecture/: 01-stack.md  02-deployment-topologies.md  03-sync-and-offline.md  04-security.md  05-bootstrap.md
spec/02-data-model/: 01-entities.md  02-invariants.md  03-set-syntax.md  04-access-matrix.md  05-design-decisions.md
spec/03-modules/: 01-pos-operation.md  02-catalog.md  03-cash-register.md  04-delivery.md  05-kitchen-and-routing.md  06-employees-clients.md  07-collective-catering.md  08-system-and-maintenance.md  09-plugins.md
spec/04-ui-ux/: 01-ui-overview.md  02-pos-screens.md
spec/05-integrations/: 01-hardware-overview.md  02-fiscal-compliance.md  03-api-and-extensions.md
spec/06-non-functional/: 01-nfrs.md
spec/07-roadmap/: 01-roadmap.md
spec/08-appendices/: 01-winrest-to-openrest-mapping.md  02-printer-flags.md  03-document-types-and-fiscal.md  04-troubleshooting.md
