[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
api-rest = { path = "../../crates/api-rest" }
server = { path = "../../crates/server" }
domain = { path = "../../crates/domain" }
storage = { path = "../../crates/storage" }
axum = "0.7"
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = "0.3"
