[package]
name = "api-rest"
version = "0.1.0"
edition = "2021"

[dependencies]
domain = { path = "../domain" }
storage = { path = "../storage" }
server = { path = "../server" }
axum = "0.7"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
