[package]
name = "api-rest"
version = "0.1.0"
edition = "2021"

[dependencies]
domain = { path = "../domain" }
storage = { path = "../storage" }
server = { path = "../server" }
devices = { path = "../devices" }
fiscal = { path = "../fiscal" }
at-series = { path = "../at-series" }
axum = "0.7"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tower-http = { version = "0.5", features = ["cors", "trace"] }
thiserror = { workspace = true }
