[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
domain = { path = "../domain" }
storage = { path = "../storage" }
fiscal = { path = "../fiscal" }
devices = { path = "../devices" }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
rsa = "0.9"
